2012-04-06  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler.h (fhandler_base::nohandle): Implement "by hand" rather than
	through macro.  Set io_handle to INVALID_HANDLE_VALUE when setting flag
	to true.

2012-04-06  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* path.c (path_conv::check): Avoid directly referencing fields of the
	dev structure when it can be easily avoided.

2012-04-05  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 14.

2012-04-05  Corinna Vinschen  <corinna@vinschen.de>

	* passwd.cc (pwdgrp::read_passwd): Fix pretty_ls entry typo contain
	the required number of colons.

2012-04-04  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler.h (fhandler_pty_common::bytes_available): Declare new
	function.
	(fhandler_pty_master::flush_to_slave): Ditto.
	* fhandler_tty.cc (bytes_available): Define new function.
	(fhandler_pty_common::bytes_available): Ditto.
	(handler_pty_master::flush_to_slave): Ditto.
	(fhandler_pty_master::process_slave_output): Call flush_to_slave ()
	here.  Use bytes_available () rather than PeekNamedPipe.  Clean up
	sloppy logic.
	(fhandler_pty_slave::read): Use bytes_available () rather than
	PeekNamedPipe.
	(fhandler_pty_slave::ioctl): Ditto.
	(fhandler_pty_master::ioctl): Ditto.
	(fhandler_pty_master::cleanup): Remove ancient #if 0.
	* select.cc (peek_pipe): Call flush_to_slave whenever we're checking
	for a pty master.

2012-04-04  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_nodevice.cc (fhandler_nodevice::open): Convert EROFS to
	ENOENT if non-existent file got opened for reading only.  Explain why.
	* path.cc (path_conv::check): Stick to ENOENT if file has been opened
	for informational purposes only.  Add to comment.

2012-04-04  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (path_conv::check): Convert device type to FH_FS for
	non-existent files on /dev, unless /dev itself doesn't exist on disk.
	Add comment to explain why.
